--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
+    "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
+    "cssnano": "^5.0.6",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^1.6.2",
+    "postcss": "^8.3.5",
+    "postcss-loader": "^6.1.0",
     "style-loader": "^3.0.0",
     "webpack": "^5.41.0",
     "webpack-cli": "^4.7.2",
