--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "predeploy": " rm -R -f dist && yarn build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "@CodingLeonardo",
@@ -19,6 +21,7 @@
     "css-loader": "^5.2.6",
     "cssnano": "^5.0.6",
     "file-loader": "^6.2.0",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^1.6.2",
     "postcss": "^8.3.5",
